Add fix for safari #111

--- a/css/ebi-css-build/_ebi_masthead_styles.scss
+++ b/css/ebi-css-build/_ebi_masthead_styles.scss
@@ -61,6 +61,7 @@
     ul {
       li a:before {
         font-family: 'EBI-Generic';
+        display: inline-block; // safari 9 & 10 fix
       }
 
       // custom colour for Home
