--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -218,12 +218,13 @@ a:active {
 
     ul li a:before {
       display: inline-block; // safari 9 & 10 fix
+      padding-right: .4rem;
     }
 
     /* custom colour for Home */
     ul li.home a:before {
       font-family: 'EBI-Generic';
-      content: 'H ';
+      content: 'H';
     }
     ul li.home a:hover,
     ul li.home a:active,
@@ -234,7 +235,7 @@ a:active {
     /* custom colour for Services */
     ul li.services a:before {
       font-family: 'EBI-Generic';
-      content: '( ';
+      content: '(';
     }
     ul li.services a:hover,
     ul li.services a:active,
@@ -245,7 +246,7 @@ a:active {
     /* custom colour for Research */
     ul li.research a:before {
       font-family: 'EBI-Generic';
-      content: ') ';
+      content: ')';
     }
     ul li.research a:hover,
     ul li.research a:active,
@@ -256,7 +257,7 @@ a:active {
     /* custom colour for Training */
     ul li.training a:before {
       font-family: 'EBI-Generic';
-      content: 't ';
+      content: 't';
     }
     ul li.training a:hover,
     ul li.training a:active,
@@ -267,7 +268,7 @@ a:active {
     /* custom colour for About us */
     ul li.about a:before {
       font-family: 'EBI-Generic';
-      content: 'i ';
+      content: 'i';
     }
     ul li.about a:hover,
     ul li.about a:active,
