Trial fira in v1.3

--- a/css/ebi-css-build/_ebi_theme_settings.scss
+++ b/css/ebi-css-build/_ebi_theme_settings.scss
@@ -33,7 +33,7 @@ $dark-gray: #8a8a8a;
 
 $body-background: $ebi-colour-white;
 $body-font-color: $ebi-colour-dark;
-$body-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$body-font-family: 'Fira Sans', Helvetica, Arial, sans-serif;
 $body-font-family-serif: 'EB Garamond', 'georgia', serif;
 
 // Label tweaks
