--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -42,7 +42,7 @@ html.js fieldset.collapsed { height: 2em; }
 
 /* Edit form */
 .node-form input#edit-title {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: 'Fira Sans', Helvetica, Roboto, Arial, sans-serif;
   font-size: 1.8em;
   height: 2em;
 }
