--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,8 +49,8 @@
   <!-- If you have a custom header image or colour -->
   <!--
   -->
-  <meta name="ebi:masthead-color" content="#091314">
-  <meta name="ebi:masthead-image" content="{{ site.domain }}{{ site.baseurl }}/static/background.jpg">
+  <meta name="ebi:masthead-color" content="#007c82">
+  <!-- <meta name="ebi:masthead-image" content="{{ site.domain }}{{ site.baseurl }}/static/background.jpg"> -->
 
     <!-- you can replace this with theme-[projectname].css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
