--- a/css/ebi-css-build/_ebi_footer_styles.scss
+++ b/css/ebi-css-build/_ebi_footer_styles.scss
@@ -7,7 +7,7 @@
   // GLOBAL FOOTER
   .global-footer {
     border-top: 5px solid #eee;
-    padding-top: .5rem;
+    padding-top: 1.5rem;
 
     h5 {
       margin-top: 1.25rem;
