Improve loading of JS/CSS

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,11 +18,11 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!-- Your custom JavaScript file scan go here... change names accordingly -->
 <!-- <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.2/js/script.js"></script> -->
-<script defer="defer" src="js/script.js"></script>
+<script defer="defer" src="{{ site.baseurl }}/js/script.js"></script>
 
 <!-- The Foundation theme JavaScript -->
 <script src="libraries/foundation-6/js/foundation.js"></script>
-<script src="js/foundationExtendEBI.js"></script>
+<script src="{{ site.baseurl }}/js/foundationExtendEBI.js"></script>
 <!-- <script src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.2/libraries/foundation-6/js/foundation.js"></script> -->
 <!-- <script src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.2/js/foundationExtendEBI.js"></script> -->
 <script type="text/JavaScript">$(document).foundation();</script>
@@ -30,11 +30,6 @@
 
 {% comment %} Custom global JS could go here: {% endcomment %}
 {% for js in site.custom_js %}
-<script src="{{js}}"></script>
-{% endfor %}
-
-{% comment %} Custom Component Scripts (from individual .md files) go here: {% endcomment %}
-{% for js in page.javascript %}
 <script src="{{js}}"></script>
 {% endfor %}
 
